--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,5 +10,7 @@
     <string name="tb_date">Jan 1, 2013</string>
     <string name="tb_month">Month</string>
     <string name="test_desc">This is a really long description to test the capacity of the EvenView XML layout for padding issues, wrapping issues or any other layout problems.</string>
+    <string name="tb_aev">Create an Event</string>
+    <string name="tb_atd">Add to ToDo List</string>
 
 </resources>
