--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <string name="app_name">scheduler</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
@@ -24,5 +23,5 @@
     <string name="ce_e_ala">Alarm Enabled</string>
     <string name="ce_d_ala">Alarm Disabled</string>
     <string name="ce_alatv">Event Alarm: </string>
-
+    <string name="ce_create">Create Event</string>
 </resources>
