--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="td_time">Time of Event/Time Due:</string>
     <string name="td_date">Date of ToDo:</string>
     <string name="tb_aqt">Quick ToDo</string>
+    <string name="title_activity_todo_activity">Create a ToDo</string>
 </resources>
