--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="td_date">Date of ToDo:</string>
     <string name="tb_aqt">Quick ToDo</string>
     <string name="title_activity_todo_activity">Create a ToDo</string>
+    <string name="title_activity_month_activity">Month View</string>
 </resources>
