--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">scheduler</string>
+    <string name="app_name">Planner Plus</string>
     <string name="action_settings">Settings</string>
     <string name="action_remove">Remove</string>
     <string name="action_edit">Edit Event</string>
