--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="Color_Text">Select a color for the Event</string>
     <string name="td_Color_Text">Select a color for your ToDo</string>
     <string name="clear_all">Delete Everything</string>
+    <string name="test_item">Test Item</string>
 </resources>
