--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="app_name">Planner Plus</string>
     <string name="action_settings">Settings</string>
     <string name="action_remove">Remove</string>
-    <string name="action_edit">Edit Event</string>
+    <string name="action_edit">Edit Selection</string>
     <string name="tb_add">+ Event</string>
     <string name="tb_date">Jan 1, 2013</string>
     <string name="tb_month">Month</string>
