--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -35,4 +35,5 @@
     <string name="td_Color_Text">Select a color for your ToDo</string>
     <string name="clear_all">Delete Everything</string>
     <string name="test_item">Test Item</string>
+    <string name="tb_rep">Course or Work</string>
 </resources>
