removed debug outputs, changed Button string Signed-off-by: CLYwBless <andyng@hawaii.edu>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -36,5 +36,5 @@
     <string name="clear_all">Delete Everything</string>
     <string name="test_item">Test Item</string>
     <string name="tb_rep">Course or Work</string>
-    <string name="edt_ev">Edit Event</string>
+    <string name="edt_ev">Apply Edits</string>
 </resources>
