--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -37,4 +37,11 @@
     <string name="test_item">Test Item</string>
     <string name="tb_rep">Weekly Agenda</string>
     <string name="edt_ev">Apply Edits</string>
+    <string name="rp_sun">Sun</string>
+    <string name="rp_mon">Mon</string>
+    <string name="rp_tue">Tue</string>
+    <string name="rp_wed">Wed</string>
+    <string name="rp_thu">Thu</string>
+    <string name="rp_fri">Fri</string>
+    <string name="rp_sat">Sat</string>
 </resources>
