--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -37,11 +37,12 @@
     <string name="test_item">Test Item</string>
     <string name="tb_rep">Weekly Agenda</string>
     <string name="edt_ev">Apply Edits</string>
-    <string name="rp_sun">Sun</string>
-    <string name="rp_mon">Mon</string>
-    <string name="rp_tue">Tue</string>
-    <string name="rp_wed">Wed</string>
-    <string name="rp_thu">Thu</string>
-    <string name="rp_fri">Fri</string>
-    <string name="rp_sat">Sat</string>
+    <string name="rp_sun">SU</string>
+    <string name="rp_mon">M</string>
+    <string name="rp_tue">T</string>
+    <string name="rp_wed">W</string>
+    <string name="rp_thu">TH</string>
+    <string name="rp_fri">F</string>
+    <string name="rp_sat">SA</string>
+    <string name="rp_rep">Repeated Days:</string>
 </resources>
