Renamed Weekly Agenda to Class Planner
Signed-off-by: CLYwBless <andyng@hawaii.edu>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -35,7 +35,7 @@
     <string name="td_Color_Text">Select a color for your ToDo</string>
     <string name="clear_all">Delete Everything</string>
     <string name="test_item">Test Item</string>
-    <string name="tb_rep">Weekly Agenda</string>
+    <string name="tb_rep">Class Planner</string>
     <string name="edt_ev">Apply Edits</string>
     <string name="rp_sun">SU</string>
     <string name="rp_mon">M</string>
