--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,10 +18,10 @@
     <string name="ce_stime">Event Starts at:</string>
     <string name="ce_etime">Event Ends at:</string>
     <string name="ce_doe">Date of Event:</string>
-    <string name="ce_alarm">Alarm</string>
-    <string name="ce_e_ala">Alarm Enabled</string>
-    <string name="ce_d_ala">Alarm Disabled</string>
-    <string name="ce_alatv">Event Alarm: </string>
+    <string name="ce_alarm">Notification</string>
+    <string name="ce_e_ala">Notification Enabled</string>
+    <string name="ce_d_ala">Notification Disabled</string>
+    <string name="ce_alatv">Event Notification: </string>
     <string name="ce_create">Create Event</string>
     <string name="tb_aqe">Quick Event</string>
     <string name="td_name">Name of ToDo Activity:</string>
