--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -34,7 +34,7 @@
     <string name="Color_Text">Select a color for the Event</string>
     <string name="td_Color_Text">Select a color for your ToDo</string>
     <string name="clear_all">Delete Everything</string>
-    <string name="test_item">Test Item</string>
+    <string name="test_item">Create Alarm</string>
     <string name="tb_rep">Class Planner</string>
     <string name="edt_ev">Apply Edits</string>
     <string name="rp_sun">SU</string>
